--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <div class="description">
                                 <p><strong>Ph. D.</strong> Nuclear Science and Technology, 09/2015 - 06/2020</p>
                                 <p class="edu-sc"><strong>Supervisor</strong>: Prof. Liangbin Li</p>
-                                <p class="edu-sc"><strong>Research Area</strong>: Numerical simulation of nonlinear fracture and flow instability</p>
+                                <p class="edu-sc"><strong>Research Area</strong>: <a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CDFD&dbname=CDFDLAST2021&filename=1020098260.nh&uniplatform=NZKPT&v=-G4TmjbO3Q0cZ5889nmYlExZMDe-w274_arJW38o1xwbhs_x7gEiDrw-jI0rnOWl" traget="_blank">Numerical simulation of nonlinear fracture and flow instability</a></p>
                                 <p class="edu-sc">University of Science and Technology of China (USTC), Hefei, China</p>
                             </div>
                         </li>
