文件移动位置

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
     </div>
     <section id="pic"  class="home-section1">
-        <img src="./imgs/6.jpg"/>
+        <img src="./author/6.jpg"/>
     </section>
     <div class="page-body">
         <section id="about" class="home-section">
