--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-left">
-                    <a class=navbar-brand href="./">Home</a>
+                    <a class=navbar-brand href="javascript:scroll(0,0);" target="_self">Home</a>
                 </div>
                 <div class="nav-right">
                     <ul class="navbar-nav">
