--- a/index.html
+++ b/index.html
@@ -213,9 +213,7 @@
                     <ul class="ul-edu">
                         <li>
                             <p>Young Scientists Fund of the National Natural Science Foundation of China. </p>
-                            <p>Study on the dynamic instability mechanism for subsonic crack in
-                                superelastic materials at large deformation.</p>
-                            <p>2022.1-2023.12, hold.</p>
+                            <p>Study on the dynamic instability mechanism for subsonic crack in hyperelastic materials at large deformation.2022.1-2023.12.</p>
                             <!-- <p></p> -->
                         </li>
                     </ul>
