--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
             <div class="edu-profile">
                 <div class="edu-tem">
-                    <h2 class="pro-title line">WORK EXPERIENCE </h2>
+                    <h2 class="pro-title line"><strong>WORK EXPERIENCES</strong></h2>
                     <ul class="ul-edu">
                         <li>
                             <p>Postdoc. Solid Mechanics, 06/2020 – at present</p>
