--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <img id="author" src="./author/tfc.jpg" alt="Fucheng Tian" />
                 <div class="portrait-title">
                     <h2><strong>Fucheng Tian</strong></h2>
-                    <h3>Ph.D</h3>
+                    <h3><strong>Ph.D</strong></h3>
                     <h3>
                         <a href="https://www.ustc.edu.cn/" target="_blank" rel="noopener">
                             <span>University of Science and Technology of China</span>
@@ -69,7 +69,7 @@
             </div>
             <div class="profile  pro-r">
                 <h1>ABOUT ME：</h1>
-                <p>I am a postdoctoral researcher at the <a href="http://softmatter.ustc.edu.cn/" target="_blank">softmatter Lab (软物质实验室)</a>,University of Science and Technology of China (中国科学技术大学，合肥). My research is committed to revealing the underlying physical origins of the unsolved issues involving extreme deformations such as soft material fracture and nonlinear dynamic instability through advanced numerical simulations.
+                <p>I am a postdoctoral researcher at the <a href="http://softmatter.ustc.edu.cn/" target="_blank">softmatter Lab (软物质实验室)</a>,<strong>University of Science and Technology of China (中国科学技术大学，合肥)</strong>. My research is committed to revealing the underlying physical origins of the unsolved issues involving extreme deformations such as soft material fracture and nonlinear dynamic instability through advanced numerical simulations.
                 </p>
                 <h1>SKILLS & ABILITIES：</h1>
                 <ul class="ul-edu no-pat">
@@ -89,7 +89,7 @@
 
             <div class="edu-profile">
                 <div class="edu-tem">
-                    <h2 class="pro-title line">EDUCATION：</h2>
+                    <h2 class="pro-title line"><strong>EDUCATION</strong>：</h2>
                     <ul class="education">
                         <li>
                             <img src="./author/cap.png" class="cap"/>
@@ -134,9 +134,9 @@
                 <div class="edu-tem">
                     <h2 class="pro-title line">RESEARCH INTERESTS</h2>
                     <ul class="ul-edu">
-                        <li>Phase field modeling of fracture at large deformations;</li>
-                        <li>Fracture physics and flow instability;</li>
-                        <li>Advanced algorithms (adaptive mesh, meshfree, machine learning, etc.) </li>
+                        <li>Phase field modeling of finite-strain fracture in soft materials;</li>
+                        <li>Fracture physics and dynamic instability/bifurcation (high-speed moving crack);</li>
+                        <li>Advanced algorithms and coding (adaptive mesh, meshfree, machine learning, etc.) </li>
                     </ul>
                 </div>
 
