--- a/index.html
+++ b/index.html
@@ -143,61 +143,61 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/DENT.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/Mixed_I_II.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/mixed_I_III.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/multi-holes.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/peeling.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/S1.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/S3.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/tear.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/twisting.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
