--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h1 class="commend-title">Research</h1>
             <div class="edu-profile">
                 <div class="edu-tem">
-                    <h2 class="pro-title line">RESEARCH INTERESTS</h2>
+                    <h2 class="pro-title line"><strong>RESEARCH INTERESTS</strong></h2>
                     <ul class="ul-edu">
                         <li>Phase field modeling of finite-strain fracture in soft materials;</li>
                         <li>Fracture physics and dynamic instability/bifurcation (high-speed moving crack);</li>
@@ -209,10 +209,10 @@
 
             <div class="edu-profile">
                 <div class="edu-tem  pd-top">
-                    <h2 class="pro-title line">Projects </h2>
+                    <h2 class="pro-title line"><strong>Projects<strong> </h2>
                     <ul class="ul-edu">
                         <li>
-                            <p>Young Scientists Fund of the National Natural Science Foundation of China. </p>
+                            <p><strong>Young Scientists Fund of the National Natural Science Foundation of China<strong>. </p>
                             <p>Study on the dynamic instability mechanism for subsonic crack in hyperelastic materials at large deformation.2022.1-2023.12.</p>
                             <!-- <p></p> -->
                         </li>
