--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                     <h2 class="pro-title line"><strong>Projects<strong> </h2>
                     <ul class="ul-edu">
                         <li>
-                            <p><strong>Young Scientists Fund of the National Natural Science Foundation of China<strong>. </p>
-                            <p>Study on the dynamic instability mechanism for subsonic crack in hyperelastic materials at large deformation.2022.1-2023.12.</p>
+                            <p>Young Scientists Fund of the National Natural Science Foundation of China. </p>
+                            <p>Study on the dynamic instability mechanism for subsonic crack in hyperelastic materials at large deformation(Grant No. 12102420).2022.1-2023.12.</p>
                             <!-- <p></p> -->
                         </li>
                     </ul>
