--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
             <div class="edu-profile">
                 <div class="edu-tem  pd-top">
-                    <h2 class="pro-title line"><strong>Projects<strong> </h2>
+                    <h2 class="pro-title line">Projects </h2>
                     <ul class="ul-edu">
                         <li>
                             <p>Young Scientists Fund of the National Natural Science Foundation of China. </p>
