--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="profile pro-l">
                 <img id="author" src="./author/tfc.jpg" alt="Fucheng Tian" />
                 <div class="portrait-title">
-                    <h2><strong>Fucheng Tian</strong></h2>
+                    <h2><strong>Fucheng Tian(田富成)</strong></h2>
                     <h3><strong>Ph.D</strong></h3>
                     <h3>
                         <a href="https://www.ustc.edu.cn/" target="_blank" rel="noopener">
