--- a/index.html
+++ b/index.html
@@ -140,71 +140,140 @@
                     </ul>
                 </div>
 
-                <div class="swiper mySwiper">
+                <div class="swiper mySwiper swiper-pc">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/DENT.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/Mixed_I_II.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video id="video" class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                            <div id="output"></div>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/mixed_I_III.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/multi-holes.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/peeling.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/S1.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/S3.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/tear.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                           <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <video class="myVideo" style="object-fit:fill;opacity:0.99;" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/twisting.mp4" type="video/mp4">
                                 Sorry,Your browser does not support Video Tags!
                             </video>
                           </div>
                     </div>
                     <div class="swiper-pagination"></div>
-                  </div>
+                </div>
+
+                <div class="swiper mySwiper swiper-h5">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                          <video class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/DENT.jpg" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/DENT.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                        </div>
+                        <div class="swiper-slide">
+                          <video class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/Mixed_I_II.jpg" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/Mixed_I_II.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                        </div>
+                        <div class="swiper-slide">
+                          <video id="video" class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/brittle_fracture_3D.jpg"  webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                          <div id="output"></div>
+                        </div>
+                        <div class="swiper-slide">
+                          <video class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/mixed_I_III.jpg" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/mixed_I_III.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                        </div>
+                        <div class="swiper-slide">
+                          <video class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/multi-holes.jpg" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/multi-holes.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                        </div>
+                        <div class="swiper-slide">
+                          <video class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/peeling.jpg" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/peeling.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                        </div>
+                        <div class="swiper-slide">
+                          <video class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/S1.jpg" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/S1.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                        </div>
+                        <div class="swiper-slide">
+                          <video class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/S3.jpg" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/S3.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                        </div>
+                        <div class="swiper-slide">
+                          <video class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/tear.jpg" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/tear.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                        </div>
+                        <div class="swiper-slide">
+                          <video class="myVideo" style="object-fit:fill;opacity:0.99;" poster="./video/twisting.jpg" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="metadata"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                              <source src="./video/twisting.mp4" type="video/mp4">
+                              Sorry,Your browser does not support Video Tags!
+                          </video>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+
             </div>
 
             <div class="edu-profile">
@@ -279,6 +348,19 @@
         </section>
     </div>
     <script>
+        var system ={};  
+        var p = navigator.platform;       
+        system.win = p.indexOf("Win") == 0;  
+        system.mac = p.indexOf("Mac") == 0;  
+        system.x11 = (p == "X11") || (p.indexOf("Linux") == 0);     
+        if(system.win||system.mac||system.xll){//如果是电脑跳转到
+               document.getElementsByClassName('swiper-pc')[0].style.display="block";
+               document.getElementsByClassName('swiper-h5')[0].style.display="none";
+        }else{  //如果是手机
+            document.getElementsByClassName('swiper-pc')[0].style.display="none";
+            document.getElementsByClassName('swiper-h5')[0].style.display="block";    
+        }
+
         var map = new BMapGL.Map('map-container'); // 创建Map实例
             var zoomCtrl = new BMapGL.ZoomControl();  // 添加缩放控件
             map.addControl(zoomCtrl);
