--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=yes"/>
     <link rel="stylesheet" href="./css/swiper-bundle.min.css"> 
-    <link rel=stylesheet href=./css/index.css>
+    <link rel=stylesheet href=./css/index.min.css>
     <title>Tian Fucheng's personal homepage</title>
     <script src="https://api.map.baidu.com/api?&v=3.0&type=webgl&ak=NXDzEkh5YQPPFykYjb4B0y3GB8Wo8vq1"></script>
     <script src="./js/swiper-bundle.min.js"> </script>
