--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
         <section id="paper" class="home-section">
             <h1 class="commend-title">Publications</h1>
             <ul class="ul-paper">
+                <li><span class="v-timeline--item"></span><div class="paper-content">Jiale Ji, Mengnan Zhang, Jun Zeng, <strong>Fucheng Tian*</strong>. Uncovering the intrinsic deficiencies of phase-field modeling for dynamic fracture.<strong> International Journal of Solids and Structures</strong>, 2022: 111961.</div></li>
+                
                 <li><span class="v-timeline--item"></span><div class="paper-content">Erjie Yang, Mengnan Zhang, Jun Zeng, <strong>Fucheng Tian*</strong>. Wrinkling and restabilization of hyperelastic PDMS membrane at finite strain.<strong> Soft Matter</strong>, 2022.</div></li>
 
                 <li><span class="v-timeline--item"></span><div class="paper-content"><strong>Fucheng Tian</strong>, Jun Zeng, Mengnan Zhang, Liangbin Li. Mixed displacement-pressure-phase field framework for finite strain fracture of nearly incompressible hyperelastic materials.<strong> Computer Methods in Applied Mechanics and Engineering</strong>, 2022.</div></li>
