--- a/index.html
+++ b/index.html
@@ -300,11 +300,13 @@
         <section id="paper" class="home-section">
             <h1 class="commend-title">Publications</h1>
             <ul class="ul-paper">
+                <li><span class="v-timeline--item"></span><div class="paper-content"><strong>Fucheng Tian*</strong>, Mengnan Zhang, Jun Zeng, Bin Li*, Liangbin Li. Adaptive stabilized mixed formulation for phase field fracture modeling of nearly incompressible finite elasticity.<strong> International Journal of Mechanical Sciences</strong>, 2022: 107753.</div></li>
+               
                 <li><span class="v-timeline--item"></span><div class="paper-content">Jiale Ji, Mengnan Zhang, Jun Zeng, <strong>Fucheng Tian*</strong>. Uncovering the intrinsic deficiencies of phase-field modeling for dynamic fracture.<strong> International Journal of Solids and Structures</strong>, 2022: 111961.</div></li>
                 
-                <li><span class="v-timeline--item"></span><div class="paper-content">Erjie Yang, Mengnan Zhang, Jun Zeng, <strong>Fucheng Tian*</strong>. Wrinkling and restabilization of hyperelastic PDMS membrane at finite strain.<strong> Soft Matter</strong>, 2022.</div></li>
+                <li><span class="v-timeline--item"></span><div class="paper-content">Erjie Yang, Mengnan Zhang, Jun Zeng, <strong>Fucheng Tian*</strong>. Wrinkling and restabilization of hyperelastic PDMS membrane at finite strain.<strong> Soft Matter</strong>, 2022, 18 (29), 5465-5473.</div></li>
 
-                <li><span class="v-timeline--item"></span><div class="paper-content"><strong>Fucheng Tian</strong>, Jun Zeng, Mengnan Zhang, Liangbin Li. Mixed displacement-pressure-phase field framework for finite strain fracture of nearly incompressible hyperelastic materials.<strong> Computer Methods in Applied Mechanics and Engineering</strong>, 2022.</div></li>
+                <li><span class="v-timeline--item"></span><div class="paper-content"><strong>Fucheng Tian</strong>, Jun Zeng, Mengnan Zhang, Liangbin Li. Mixed displacement-pressure-phase field framework for finite strain fracture of nearly incompressible hyperelastic materials.<strong> Computer Methods in Applied Mechanics and Engineering</strong>, 2022, 394: 114933.</div></li>
 
                 <li><span class="v-timeline--item"></span><div class="paper-content">Mengnan Zhang, Erjie Yang, Jun Zeng, Jiale Ji, <strong>Fucheng Tian*</strong>, Liangbin Li*. Numerical study on oblique stretching of viscoelastic polymer film.<strong> Journal of Non-Newtonian Fluid Mechanics</strong>, 2021, 295: 104597.</div></li>
 
