--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <section id="paper" class="home-section">
             <h1 class="commend-title">Publications</h1>
             <ul class="ul-paper">
-                <li><span class="v-timeline--item"></span><div class="paper-content">Shuyu Chen,Jun Zeng,Mengnan Zhang, Jiale Ji, Liangbin Li, <strong>Fucheng Tian*</strong>. Fracture of soft materials with interfaces: phase field modeling based on hybrid ES-FEM/FEM[J]. </strong>Engineering Fracture Mechanics</strong>, 2022: 108892.</div></li>
+                <li><span class="v-timeline--item"></span><div class="paper-content">Shuyu Chen,Jun Zeng, Mengnan Zhang, Jiale Ji, Liangbin Li. <strong>Fucheng Tian*</strong>. Fracture of soft materials with interfaces: phase field modeling based on hybrid ES-FEM/FEM. <strong>Engineering Fracture Mechanics</strong>, 2022: 108892.</div></li>
                 
                 <li><span class="v-timeline--item"></span><div class="paper-content"><strong>Fucheng Tian*</strong>, Mengnan Zhang, Jun Zeng, Bin Li*, Liangbin Li. Adaptive stabilized mixed formulation for phase field fracture modeling of nearly incompressible finite elasticity.<strong> International Journal of Mechanical Sciences</strong>, 2022: 107753.</div></li>
                
