--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                     <h2><strong>Fucheng Tian(田富成)</strong></h2>
                     <h3><strong>Ph.D</strong></h3>
                     <h3>
-                        <a href="https://www.ustc.edu.cn/" target="_blank" rel="noopener">
-                            <span>University of Science and Technology of China</span>
+                        <a href="https://www.hokudai.ac.jp" target="_blank" rel="noopener">
+                            <span>Hokkaido University</span>
                         </a>
                     </h3>
                     <h3>
-                        <a href="https://www.ustc.edu.cn/" target="_blank" rel="noopener">
-                            <span> Hefei, Anhui</span>
+                        <a href="https://www.hokudai.ac.jp" target="_blank" rel="noopener">
+                            <span> Sapporo, Hokkaido, Japan</span>
                         </a>
                     </h3>
                 </div>
