--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <h2 class="pro-title line"><strong>WORK EXPERIENCES</strong></h2>
                     <ul class="ul-edu">
                         <li>
-                            <p>Postdoc. Solid Mechanics, 06/2020 – at present</p>
+                            <p>Postdoc. Solid Mechanics, 06/2020 – 11/2022</p>
                             <p class="edu-sc"><strong>Co-advisor</strong>: Prof. Liangbin Li</p>
                             <p class="edu-sc"><strong>Research Area</strong>: Soft material mechanics</p>
                             <p class="edu-sc">University of Science and Technology of China (USTC), Hefei, China </p>
