--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@
         <section id="paper" class="home-section">
             <h1 class="commend-title">Publications</h1>
             <ul class="ul-paper">
+                <li><span class="v-timeline--item"></span><div class="paper-content">Mengnan Zhang, Erjie Yang, Cui Nie, Jun Zeng, <strong>Fucheng Tian*</strong>, Liangbin Li. An extended ordinary state-based peridynamic model for nonlinear deformation and fracture. <strong> Computer Methods in Applied Mechanics and Engineering </strong>, 2023, 412: 116100. </div></li>
+               
                 <li><span class="v-timeline--item"></span><div class="paper-content">Jun Zeng, Jiale Ji, Shuyu Chen, <strong>Fucheng Tian*</strong>. Sub-Rayleigh to supershear transition of dynamic mode-II cracks. <strong>International Journal of Engineering Science</strong>, 2023, 188: 103862.</div></li>
                
                 <li><span class="v-timeline--item"></span><div class="paper-content">Shuyu Chen,Jun Zeng, Mengnan Zhang, Jiale Ji, Liangbin Li, <strong>Fucheng Tian*</strong>. Fracture of soft materials with interfaces: phase field modeling based on hybrid ES-FEM/FEM. <strong>Engineering Fracture Mechanics</strong>, 2022: 108892.</div></li>
